--- a/src/components/ShipFooter/ShipFooter.scss
+++ b/src/components/ShipFooter/ShipFooter.scss
@@ -3,8 +3,9 @@
   width: 95%;
   background-color: orange;
   display: flex;
-  overflow-x: auto;
+  overflow-x: scroll;
   white-space: nowrap;
   background-color: rgba(0, 0, 0, 0.2);
   color: white;
+  user-select: none;
 }
