--- a/src/components/ShipFooter/ShipFooter.scss
+++ b/src/components/ShipFooter/ShipFooter.scss
@@ -1,11 +1,16 @@
 .footer {
-  height: 18vh;
   width: 95%;
+  height: 100%;
   background-color: orange;
   display: flex;
-  overflow-x: scroll;
   white-space: nowrap;
   background-color: rgba(0, 0, 0, 0.2);
   color: white;
   user-select: none;
+  overflow-x: hidden;
+  cursor: pointer;
+}
+
+.footer-grab {
+  cursor: grab;
 }
