--- a/src/components/ShipIcon/ShipIcon.scss
+++ b/src/components/ShipIcon/ShipIcon.scss
@@ -1,8 +1,12 @@
 .icon {
-  height: 18vh;
+  height: 20vh;
   padding: 0 20px;
-  cursor: pointer;
+  border-right: solid 1px rgba(0, 0, 0, 0.2);
+  border-left: solid 1px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
 }
 .icon-img {
-    height: 50px;
+  height: 100%;
+    pointer-events: none;
 }
