--- a/src/components/ShipMain/ShipMain.scss
+++ b/src/components/ShipMain/ShipMain.scss
@@ -1,16 +1,20 @@
 .main-container {
-  background-image: url(../../../public/background.png);
+  width: 100%;
+  height: 100vh;
+  background-image: url(../../../public/background.jpeg);
   background-size: cover;
 }
 .ship-container {
   display: flex;
+  height: 80vh;
 }
 .footer-container{
+  height: 20vh;
   display: flex;
 }
 .filter-window {
   position: absolute;
-  height: 82vh;
+  height: 80vh;
   opacity: 0.5;
   width: 15%;
 }
