--- a/src/components/ShipFilter/ShipFilter.scss
+++ b/src/components/ShipFilter/ShipFilter.scss
@@ -3,15 +3,42 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.4);
   height: 80vh;
-  opacity: 0.5;
-  width: 20%;
+  width: 120px;
   display: flex;
+  flex-direction: column;
+}
+.filter-column {
+  display: flex;
+  flex-direction: column;
 }
 .filter-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.filter-icon{
+.filter-icon {
   height: 27px;
+}
+.filter-inactive {
+  opacity: 0.5;
+}
+.filter-item-container {
+  cursor: pointer;
+  padding: 5px;
+  color: white;
+}
+
+.filter-container-flex{
+  display: flex;
+}
+
+.filter-reset-button {
+  color: white;
+  cursor: pointer;
+  width: 100%;
+  height: 50%;
+  background-color: rgba(0, 0, 0, 0.1);
+  border: solid 1px rgba(0, 0, 0, 0.4);
 }
