--- a/src/components/ShipInfo/ShipInfo.scss
+++ b/src/components/ShipInfo/ShipInfo.scss
@@ -1,12 +1,16 @@
 .info {
   position: absolute;
   right: 0;
-  width: 20%;
+  width: 400px;
   overflow-y: auto;
   height: 80vh;
   color: white;
   background-color: rgba(0, 0, 0, 0.4);
   &-description {
     padding: 20px;
+  }
+  &-container {
+    display: flex;
+    justify-content: space-between;
   }
 }
