--- a/src/components/ShipWindow/ShipWindow.scss
+++ b/src/components/ShipWindow/ShipWindow.scss
@@ -1,8 +1,11 @@
 .window {
-  width: 75%;
+  width: 100%;
   height: 82vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.ship-title {
-  text-align: center;
-  font-size: 45px;
+
+.ship-img{
+  padding-right: 120px;
 }
