--- a/src/components/ShipSort/ShipSort.scss
+++ b/src/components/ShipSort/ShipSort.scss
@@ -1,5 +1,5 @@
 .sort {
-  //background-color: rgba(0, 0, 0, 0.4);
+  width: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
